forth/test/fail/test_dot_call_inner_local_name.af
\ Must fail to compile.
fun: test_dot_call_inner_local_name_fail { val-name -- err }
end
